🔧 Fix Admin Login System for Clean URLs
🔐 Login System Updates:
- Updated login redirects to use /admin/ instead of admin-dashboard.html
- Fixed admin dashboard redirect to use /login/ instead of admin-login.html
- Updated 'Back to Store' link to use clean URL structure
- Fixed all navigation paths for new folder structure

✅ Admin Flow Fixed:
- Login: /login/ → /admin/ (clean URLs)
- Session validation working with new paths
- Logout redirects to correct login page
- All admin credentials still work: admin/bumable2024, heswaram/admin2024

🌐 Result: Complete admin system working with clean URLs

--- a/admin/index.html
+++ b/admin/index.html
@@ -921,7 +921,7 @@
             <a href="javascript:void(0)" onclick="showSection('orders')">Orders</a>
             <a href="javascript:void(0)" onclick="showSection('products')">Products</a>
             <a href="javascript:void(0)" onclick="showSection('customers')">Customers</a>
-            <a href="index.html">Back to Store</a>
+            <a href="../">Back to Store</a>
             <a href="#" onclick="logout()" style="background: #dc3545;">
                 Logout
             </a>
@@ -1283,7 +1283,7 @@
         // Redirect to login page
         function redirectToLogin(message) {
             alert(message);
-            window.location.href = 'admin-login.html';
+            window.location.href = '../login/';
         }
 
         // Update admin header with session info
