--- a/login/index.html
+++ b/login/index.html
@@ -329,7 +329,7 @@
                         // Session is still valid
                         showSuccess('Session found. Redirecting...');
                         setTimeout(() => {
-                            window.location.href = 'admin-dashboard.html';
+                            window.location.href = '../admin/';
                         }, 1000);
                         return;
                     } else {
@@ -368,7 +368,7 @@
                     
                     // Redirect to admin dashboard
                     setTimeout(() => {
-                        window.location.href = 'admin-dashboard.html';
+                        window.location.href = '../admin/';
                     }, 1500);
                 } else {
                     showError('Invalid username or password. Please try again.');
