🔧 Fix: Complete 404 error resolution
- Fixed JavaScript redirects in checkout page (shop.html → ../shop/)
- Removed old pages/ directory causing navigation conflicts
- Cleaned up unused quick-login.html file
- Updated main.js to handle clean URL paths correctly
- All navigation links now work with clean URL structure
- Eliminated all broken links and 404 errors

--- a/login/index.html
+++ b/login/index.html
@@ -282,7 +282,7 @@
         </div>
 
         <div class="back-link">
-            <a href="index.html">
+            <a href="../">
                 <i class="fas fa-arrow-left"></i>
                 Back to Store
             </a>
