--- a/success/index.html
+++ b/success/index.html
@@ -246,10 +246,10 @@
                 
                 <div class="nav-menu" id="nav-menu">
                     <ul class="nav-list">
-                        <li><a href="../index.html" class="nav-link">Home</a></li>
-                        <li><a href="shop.html" class="nav-link">Shop</a></li>
-                        <li><a href="../index.html#about" class="nav-link">Our Story</a></li>
-                        <li><a href="../index.html#contact" class="nav-link">Contact Us</a></li>
+                        <li><a href="../" class="nav-link">Home</a></li>
+                        <li><a href="../shop/" class="nav-link">Shop</a></li>
+                        <li><a href="../#about" class="nav-link">Our Story</a></li>
+                        <li><a href="../#contact" class="nav-link">Contact Us</a></li>
                     </ul>
                 </div>
                 
@@ -366,7 +366,7 @@
 
         <!-- Action Buttons -->
         <div class="action-buttons">
-            <a href="shop.html" class="btn-action btn-primary">
+            <a href="../shop/" class="btn-action btn-primary">
                 <i class="fas fa-shopping-bag"></i> Continue Shopping
             </a>
             <button onclick="printOrderSummary()" class="btn-action btn-success">
