--- a/shop/index.html
+++ b/shop/index.html
@@ -871,10 +871,10 @@
                 
                 <div class="nav-menu" id="nav-menu">
                     <ul class="nav-list">
-                        <li><a href="../index.html" class="nav-link">Home</a></li>
-                        <li><a href="shop.html" class="nav-link active">Shop</a></li>
-                        <li><a href="../index.html#about" class="nav-link">Our Story</a></li>
-                        <li><a href="../index.html#contact" class="nav-link">Contact Us</a></li>
+                        <li><a href="../" class="nav-link">Home</a></li>
+                        <li><a href="../shop/" class="nav-link active">Shop</a></li>
+                        <li><a href="../#about" class="nav-link">Our Story</a></li>
+                        <li><a href="../#contact" class="nav-link">Contact Us</a></li>
                     </ul>
                 </div>
                 
