💳 Update: Correct UPI Payment Details
✅ UPDATED:
- UPI ID: saravanasachin286-1@okhdfcbank
- Account Name: Saravana Sachin
- Updated checkout page with correct payment information
- Added placeholder QR code (SVG format)

📱 PAYMENT SETUP:
- UPI payment option available on checkout
- QR code display for easy scanning
- Transaction ID collection for order verification

📋 TODO:
- Replace /images/upi-qr.svg with actual QR code image
- QR code should be saved as PNG/JPG format
- See UPI-QR-SETUP.md for detailed instructions

--- a/checkout/index.html
+++ b/checkout/index.html
@@ -379,10 +379,11 @@
                     <!-- UPI Payment Details -->
                     <div class="upi-details" id="upi-details">
                         <h4>UPI Payment Details</h4>
-                        <div class="upi-id">UPI ID: bumableclothing@paytm</div>
+                        <div class="upi-id">UPI ID: saravanasachin286-1@okhdfcbank</div>
                         <div class="qr-code">
-                            <img src="../images/upi-qr.png" alt="UPI QR Code" id="upi-qr">
-                            <p>Scan QR code to pay</p>
+                            <img src="../images/upi-qr.svg" alt="UPI QR Code" id="upi-qr">
+                            <p>Scan QR code to pay with any UPI app</p>
+                            <p><small>Saravana Sachin</small></p>
                         </div>
                         <div class="form-group">
                             <label for="transaction-id">Transaction ID *</label>
