Add clickable copyright footer to checkout page with admin redirect

--- a/checkout/index.html
+++ b/checkout/index.html
@@ -471,7 +471,8 @@
                             <!-- Your QR Code Image -->
                             <img src="../images/QR.jpg" alt="UPI QR Code for saravanasachin286-1@okhdfcbank" 
                                  style="width: 200px; height: 200px; border: 2px solid #f0f0f0; border-radius: 10px; display: block; margin: 0 auto; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
-                            <p>Scan QR code to pay with any UPI app</p>
+
+                                 <p>Scan QR code to pay with any UPI app</p>
                             <p><strong>Saravana Sachin</strong></p>
                         </div>
                     </div>
@@ -833,5 +834,18 @@ You will receive a confirmation email shortly.
         // Initialize QR code
         generateUPIQR();
     </script>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-bottom">
+                <p>
+                    <a href="../admin/" style="color: #ccc; text-decoration: none; cursor: pointer;">
+                        © 2025 by BUMABLE. All rights reserved.
+                    </a>
+                </p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
