Fix: Use JavaScript onclick for admin redirect instead of href

--- a/checkout/index.html
+++ b/checkout/index.html
@@ -840,9 +840,9 @@ You will receive a confirmation email shortly.
         <div class="container">
             <div class="footer-bottom">
                 <p>
-                    <a href="../admin/" style="color: #ccc; text-decoration: none; cursor: pointer;">
+                    <span onclick="window.location.href='../admin/'" style="color: #ccc; text-decoration: none; cursor: pointer;">
                         © 2025 by BUMABLE. All rights reserved.
-                    </a>
+                    </span>
                 </p>
             </div>
         </div>
