Enhance clickable footer: Add padding, hover effect, and better styling

--- a/checkout/index.html
+++ b/checkout/index.html
@@ -839,8 +839,8 @@ You will receive a confirmation email shortly.
     <footer class="footer">
         <div class="container">
             <div class="footer-bottom">
-                <p>
-                    <span onclick="window.location.href='../admin/'" style="color: #ccc; text-decoration: none; cursor: pointer;">
+                <p style="margin-bottom: 0;">
+                    <span onclick="window.location.href='../admin/'" style="color: #ccc; text-decoration: none; cursor: pointer; display: inline-block; padding: 5px 10px; border-radius: 3px; transition: background-color 0.3s ease;" onmouseover="this.style.backgroundColor='rgba(255,255,255,0.1)'" onmouseout="this.style.backgroundColor='transparent'">
                         © 2025 by BUMABLE. All rights reserved.
                     </span>
                 </p>
