--- a/checkout/index.html
+++ b/checkout/index.html
@@ -840,9 +840,9 @@ You will receive a confirmation email shortly.
         <div class="container">
             <div class="footer-bottom">
                 <p style="margin-bottom: 0;">
-                    <span onclick="window.location.href='../admin/'" style="color: #ccc; text-decoration: none; cursor: pointer; display: inline-block; padding: 5px 10px; border-radius: 3px; transition: background-color 0.3s ease;" onmouseover="this.style.backgroundColor='rgba(255,255,255,0.1)'" onmouseout="this.style.backgroundColor='transparent'">
+                    <a href="../admin/" onclick="console.log('Admin link clicked'); return true;" style="color: #ccc; text-decoration: none; cursor: pointer; display: inline-block; padding: 8px 15px; border-radius: 5px; transition: all 0.3s ease; border: 1px solid transparent;" onmouseover="this.style.backgroundColor='rgba(255,255,255,0.1)'; this.style.borderColor='rgba(255,255,255,0.2)'" onmouseout="this.style.backgroundColor='transparent'; this.style.borderColor='transparent'">
                         © 2025 by BUMABLE. All rights reserved.
-                    </span>
+                    </a>
                 </p>
             </div>
         </div>
