--- a/checkout/index.html
+++ b/checkout/index.html
@@ -840,12 +840,42 @@ You will receive a confirmation email shortly.
         <div class="container">
             <div class="footer-bottom">
                 <p style="margin-bottom: 0;">
-                    <a href="../admin/" onclick="console.log('Admin link clicked'); return true;" style="color: #ccc; text-decoration: none; cursor: pointer; display: inline-block; padding: 8px 15px; border-radius: 5px; transition: all 0.3s ease; border: 1px solid transparent;" onmouseover="this.style.backgroundColor='rgba(255,255,255,0.1)'; this.style.borderColor='rgba(255,255,255,0.2)'" onmouseout="this.style.backgroundColor='transparent'; this.style.borderColor='transparent'">
+                    <span id="admin-link" style="color: #ccc; text-decoration: none; cursor: pointer; display: inline-block; padding: 8px 15px; border-radius: 5px; transition: all 0.3s ease; border: 1px solid transparent; user-select: none;" onmouseover="this.style.backgroundColor='rgba(255,255,255,0.1)'; this.style.borderColor='rgba(255,255,255,0.2)'" onmouseout="this.style.backgroundColor='transparent'; this.style.borderColor='transparent'">
                         © 2025 by BUMABLE. All rights reserved.
-                    </a>
+                    </span>
                 </p>
             </div>
         </div>
     </footer>
+
+    <script>
+        // Admin redirect functionality
+        document.getElementById('admin-link').addEventListener('click', function(e) {
+            e.preventDefault();
+            console.log('Copyright clicked - redirecting to admin');
+            
+            // Try multiple redirect methods
+            try {
+                // Method 1: Direct window location
+                window.location.href = '../admin/';
+            } catch (error) {
+                console.log('Method 1 failed, trying method 2');
+                // Method 2: Using assign
+                try {
+                    window.location.assign('../admin/');
+                } catch (error2) {
+                    console.log('Method 2 failed, trying method 3');
+                    // Method 3: Using replace
+                    try {
+                        window.location.replace('../admin/');
+                    } catch (error3) {
+                        console.log('All redirect methods failed:', error3);
+                        // Method 4: Open in new tab as fallback
+                        window.open('../admin/', '_blank');
+                    }
+                }
+            }
+        });
+    </script>
 </body>
 </html>
