--- a/index.html
+++ b/index.html
@@ -299,6 +299,9 @@
                         <a href="https://in.pinterest.com/bumableclothing/" target="_blank" class="social-link">
                             <i class="fab fa-pinterest"></i>
                         </a>
+                        <a href="admin/" class="social-link" title="Admin Dashboard" style="opacity: 0.7;">
+                            <i class="fas fa-cog"></i>
+                        </a>
                     </div>
                 </div>
             </div>
