--- a/shop/index.html
+++ b/shop/index.html
@@ -866,7 +866,11 @@
         <nav class="navbar">
             <div class="container">
                 <div class="nav-brand">
-                    <h1 class="logo">BUMABLE</h1>
+                    <h1 class="logo">
+                        <span class="logo-icon">●</span>
+                        BUMABLE
+                        <span class="logo-dot">.</span>
+                    </h1>
                 </div>
                 
                 <div class="nav-menu" id="nav-menu">
